Empty curve object crashes export #68135

Closed
opened 2019-08-02 16:31:57 +02:00 by Steffen Vetne · 6 comments

Broken: 2.80

A curve object that has no points will crash these export formats (potentially more if there are add-on export formats):
FBX
Stanford
STL

Add a curve to a blend file, delete all its points, and try to export the file with one of the listed formats. It will fail.

Broken: 2.80 A curve object that has no points will crash these export formats (potentially more if there are add-on export formats): FBX Stanford STL Add a curve to a blend file, delete all its points, and try to export the file with one of the listed formats. It will fail.
Author

Added subscriber: @Steffenvy-4

Added subscriber: @Steffenvy-4

This issue was referenced by 26d5fae284

This issue was referenced by 26d5fae2841d098d0e3be3b02d5d09458512c3a5

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-08-02 18:00:27 +02:00

Problem here is actually that the 'curve to object' code might return NULL/None instead of an empty mesh...

This does not make really any sense in exporter cases, nor in the 'curve to mesh' conversion operator, think we always want requested mesh here, be it empty (people can always undo operator conversion)... Will fix.

Problem here is actually that the 'curve to object' code might return NULL/None instead of an empty mesh... This does not make really any sense in exporter cases, nor in the 'curve to mesh' conversion operator, think we always want requested mesh here, be it empty (people can always undo operator conversion)... Will fix.

This issue was referenced by blender/blender-addons@6f0585fa4a

This issue was referenced by blender/blender-addons@6f0585fa4afe1d96e7994b705122547a0c35dd1a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68135
No description provided.